// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TabPage /> 자식 컴포넌트가 들어온 경우 그려준다 1`] = `
<div
  className=""
  name="title"
>
  test
</div>
`;

exports[`<TabPage /> 정상적으로 렌더링된다 1`] = `
<div
  class=""
  name="title"
/>
`;
